Bug 95114 - [Writer] Property Next style lost when saving as MS DOCX
Summary: [Writer] Property Next style lost when saving as MS DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All Linux (All)
: medium minor
Assignee: Justin L
URL:
Whiteboard: interoperability target:6.2.0
Keywords: bibisected, filter:docx, regression
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2015-10-16 14:38 UTC by Cor Nouws
Modified: 2020-09-13 18:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
test docx file (4.77 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-12-14 18:42 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-10-16 14:38:04 UTC
1. new document, add some text
2. one paragraph with Heading 2   (I only tested it with this style)
3. enter, next paragraph is Text body
4. Save as DOCX and close
5. Reopen
6. Enter at end of par with heading 2
  > Still heading 2

(Look at style properties, tab Organize..)
Comment 1 Cor Nouws 2015-10-16 14:38:48 UTC
is OK in 4.4.3.2
Comment 2 Joel Madero 2015-12-14 02:24:26 UTC
Hi Cor -

Can you test this again? I just tested with:

Bodhi Moksha
Version: 5.2.0.0.alpha0+
Build ID: 5df326438fd3a5613a52b4de1935426911ff1301

Works fine. I don't want to spend the time bibisecting it if it's resolved in 5.2 for you. Thanks
Comment 3 Robinson Tryon (qubit) 2015-12-14 05:32:47 UTC Comment hidden (obsolete)
Comment 4 Cor Nouws 2015-12-14 18:42:07 UTC
Created attachment 121303 [details]
test docx file

file from Version: 5.2.0.0.alpha0+
Build ID: d8c02ffd0f37c946e5a07f1062390714da26b8d0
Threads 2; Ver: Linux 4.2; Render: default; 

TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2015-12-10_23:40:47
Locale: nl-NL (nl_NL.UTF-8)


1 - Open
2 - Cursor at the end of paragraph "This is heading 2"
3 - Enter...
   > style still Heading 2
Comment 5 Joel Madero 2015-12-19 17:17:48 UTC
(In reply to Cor Nouws from comment #4)
> 1 - Open
> 2 - Cursor at the end of paragraph "This is heading 2"
> 3 - Enter...
>    > style still Heading 2

I see...I was misreading the steps. 

Bodhi Moksha

Setting to:
Minor - slows down but won't prevent high quality work.
Medium - regression so bumped from low


Some interesting findings with bibisect:
1) I can reproduce the problem in both 50max and 44max bibisects...
2) Going back all the way to 35all I can get to a commit that doesn't show the problem - this is somewhat surprising only because you said with 4.4.3.2 you don't see the issue (I'm not sure if 4.4.3.2 is included in 35all)

Bibisect below
 241d451e09694446622f9767fb76db50481c9e32 is the first bad commit
commit 241d451e09694446622f9767fb76db50481c9e32
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 08:31:03 2012 +0000

    source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
    
    commit c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
    Author:     Fridrich Štrba <fridrich.strba@bluewin.ch>
    AuthorDate: Tue Aug 21 12:18:44 2012 +0200
    Commit:     Fridrich Štrba <fridrich.strba@bluewin.ch>
    CommitDate: Tue Aug 21 12:18:44 2012 +0200
    
        Uploading libmspub-0.0.3 release (support for MS Pub 97 and 98)
    
        Change-Id: I6ead205a272f0167157304748d7daf8ffc9211c9

:100644 100644 b716fff249ef76de0787d2a8319c2f7070d38e42 f48bbaa1aee4fff06b03f00d856ea90afc8f4bb1 M	autogen.log
:100644 100644 445034760a67365d3bec4a003cb733c0b8aae97a 77e291a56c8feedd3992dd9c5917420647c9e573 M	ccache.log
:100644 100644 eca255af392eb4acc69d7b7ef6a6015a38572939 dd86cf323227505bc8de0a58a14c1512687e5fa0 M	commitmsg
:100644 100644 d37363a1adcf8fb7741f59097bde880735ff615d 8c0b0ea815bd74a322e365f8f118851ab08188f7 M	dev-install.log
:100644 100644 fd98319ab98b4c456f9b3fa79c533aef66a99e06 76bb1bc9512a65c3fd17fdfb8ded49c13d9ddde8 M	make.log
:040000 040000 aac755ee7c8731f009be798fe62741f3c09250cf 45f170a51889800a6518fc1f3ecad287e19cc8dc M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# bad: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect bad 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# bad: [51b63dca7427db64929ae1885d7cf1cc7eb0ba28] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10
git bisect bad 51b63dca7427db64929ae1885d7cf1cc7eb0ba28
# bad: [446a69834acf747d9d18841ec583512ae8fa42e7] source-hash-06a8ca9339f02fccf6961c0de77c49673823b35f
git bisect bad 446a69834acf747d9d18841ec583512ae8fa42e7
# bad: [d2720e99b9e6cb7b099256cc7a6d2b3f907b8d7c] source-hash-7dd6c0a8372810f48e6bee35a11ac4ad0432640b
git bisect bad d2720e99b9e6cb7b099256cc7a6d2b3f907b8d7c
# bad: [98e26b741cd0eff4b7549d782d7db5a1e98eb1a6] source-hash-c29af1572ad15ac5199a09e5812fb8354c165329
git bisect bad 98e26b741cd0eff4b7549d782d7db5a1e98eb1a6
# good: [a72763112e846bcb1c4e4c6f1612ccab6ac73772] source-hash-4662df8a7561ce71ba00accbb5170e10818d6008
git bisect good a72763112e846bcb1c4e4c6f1612ccab6ac73772
# bad: [241d451e09694446622f9767fb76db50481c9e32] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
git bisect bad 241d451e09694446622f9767fb76db50481c9e32
# good: [52abf2b644b9c2396246581d02b1796dd9cd2dff] source-hash-37b9e290d9e3d20652df0abe1a1458412f3cfe2c
git bisect good 52abf2b644b9c2396246581d02b1796dd9cd2dff
# first bad commit: [241d451e09694446622f9767fb76db50481c9e32] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
Comment 6 Xisco Faulí 2016-10-07 10:33:40 UTC
Reproduced in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a). Changing version
Comment 8 eladhen2 2018-06-06 09:17:05 UTC
This bug is present in 6.0.4.2
Build:  9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
Comment 9 Justin L 2018-07-06 15:35:28 UTC
proposed fix: https://gerrit.libreoffice.org/57073
Comment 10 Commit Notification 2018-07-07 17:56:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac540c1d743250062b3e71b094209ec1428872e9

tdf#95114 writerfilter: follow correctly converted stylename

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Justin L 2018-07-25 07:00:48 UTC
Backported to 6.1 successful as "backport combined tdf#95115 and tdf#102619: writerfilter"