tdf#95114 writerfilter: follow correctly converted stylename

Using styleIdentifierD works *if* you do an bExtendedSearch.
But since we already took the pains of ensuring that sStyleName
is not empty, and ExtendedSearch is expensive, just use sStylename.
(I don't know *why* we ensure that styleName exists, and this
code was originally flakey enough that it might be a fake
requirement...)

This only affects the few styles which have a different "name"
than their ID. The primary one affected is TextBody/Body Text.

Change-Id: I77f143760c10be4b7853f16bce2b57474b70d3f1